# internal/entity/subject.go
@@ -1,0 +1,12 @@
+package entity
+
+import "time"
+
+type Subject struct {
+	ID        int       `json:"id"`
+	Name      string    `json:"name"`
+	Status    bool      `json:"status"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	User      []User    `json:"user"`
+}
