# internal/entity/user.go
@@ -1,0 +1,13 @@
+package entity
+
+import "time"
+
+type User struct {
+	ID        int       `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	SubjectID int       `json:"subject_id,omitempty"`
+	Status    bool      `json:"status"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
