# models/user.go
@@ -1,9 +1,0 @@
-package models
-
-type User struct {
-	ID       int    `json:"id"`
-	Name     string `json:"name"`
-	Email    string `json:"email"`
-	Password string `json:"password"`
-	Status   bool   `json:"status"`
-}
